my-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  #annotations:
  #  nginx.ingress.kubernetes.io/affinity: "true" # Enable session affinity
  #  nginx.ingress.kubernetes.io/affinity-mode: "ip" # IP-based session affinity
  #  nginx.ingress.kubernetes.io/affinity-type: "ip" # Use client IP for session affinity
  #  nginx.ingress.kubernetes.io/affinity-avg-latency-type: "wlc" # Use least connection method
spec:
  ingressClassName: nginx
  rules:
    - host: example.com
      http:
        paths:
          - path: /service1
            pathType: Prefix
            backend:
              service:
                name: service1
                port:
                  number: 80
          - path: /service2
            pathType: Prefix
            backend:
              service:
                name: service2
                port:
                  number: 80
